Fix bug causing eta estimation to go wrong during uploading

BUG: 320699