src/torrent/timeestimator.h
@@ -1,6 +1,6 @@
 /***************************************************************************
- *   Copyright (C) 2006 by Ivan Vasić   								   *
- *   ivasic@gmail.com   												   *
+ *   Copyright (C) 2006 by Ivan Vasić                                     *
+ *   ivasic@gmail.com                                                      *
  *                                                                         *
  *   This program is free software; you can redistribute it and/or modify  *
  *   it under the terms of the GNU General Public License as published by  *
@@ -26,100 +26,93 @@
 
 namespace bt
 {
-	class TorrentControl;
+    class TorrentControl;
 
-	/**
-	 * Simple queue class for samples. Optimized for speed and size
-	 * without possibility to dynamically resize itself.
-	 * @author Ivan Vasic <ivasic@gmail.com>
-	 */
-	class SampleQueue
-	{
-	public:
-		SampleQueue(int max);
-		~SampleQueue();
+    /**
+     * Simple queue class for samples. Optimized for speed and size
+     * without possibility to dynamically resize itself.
+     * @author Ivan Vasic <ivasic@gmail.com>
+     */
+    class SampleQueue
+    {
+    public:
+        SampleQueue(int max);
+        ~SampleQueue();
 
-		/**
-		 * Inserts new sample into the queue. The oldest sample is overwritten.
-		 */
-		void push(Uint32 sample);
+        /**
+         * Inserts new sample into the queue. The oldest sample is overwritten.
+         */
+        void push(Uint32 sample);
 
-		Uint32 first();
-		Uint32 last();
+        Uint32 first();
+        Uint32 last();
 
-		bool isFull();
+        bool isFull();
 
-		/**
-		 * This function will return the number of samples in queue until it counts m_size number of elements.
-		 * After this point it will always return m_size since no samples are being deleted.
-		 */
-		int count();
+        /**
+         * This function will return the number of samples in queue until it counts m_size number of elements.
+         * After this point it will always return m_size since no samples are being deleted.
+         */
+        int count();
 
-		/**
-		 * Returns the sum of all samples.
-		 */
-		Uint32 sum();
+        /**
+         * Returns the sum of all samples.
+         */
+        Uint32 sum();
 
-	private:
-		int m_size;
-		int m_count;
+    private:
+        int m_size;
+        int m_count;
 
-		int m_start;
-		int m_end;
+        int m_start;
+        int m_end;
 
-		Uint32* m_samples;
-	};
+        Uint32* m_samples;
+    };
 
-	/**
-	 * ETA estimator class. It will use different algorithms for different download phases.
-	 * @author Ivan Vasic <ivasic@gmail.com>
-	*/
-	class KTORRENT_EXPORT TimeEstimator
-	{
-	public:
-		static const int NEVER = INT_MAX;
-		static const int ALREADY_FINISHED = 0;
+    /**
+     * ETA estimator class. It will use different algorithms for different download phases.
+     * @author Ivan Vasic <ivasic@gmail.com>
+    */
+    class KTORRENT_EXPORT TimeEstimator
+    {
+    public:
+        static const int NEVER = INT_MAX;
+        static const int ALREADY_FINISHED = 0;
 
-		enum ETAlgorithm
-		{
-			ETA_KT,		//ktorrent default algorithm - combination of the following according to our tests
-			ETA_CSA, 	//current speed algorithm
-			ETA_GASA,	//global average speed algorithm
-			ETA_WINX,	//window of X algorithm
-			ETA_MAVG	//moving average algorithm
-		};
+        enum ETAlgorithm
+        {
+            ETA_KT,     //ktorrent default algorithm - combination of the following according to our tests
+            ETA_CSA,    //current speed algorithm
+            ETA_GASA,   //global average speed algorithm
+            ETA_WINX,   //window of X algorithm
+            ETA_MAVG    //moving average algorithm
+        };
 
-		TimeEstimator(TorrentControl* tc);
-		~TimeEstimator();
+        TimeEstimator(TorrentControl* tc);
+        ~TimeEstimator();
 
-		///Returns ETA for m_tc torrent.
-		int estimate();
+        ///Returns ETA for m_tc torrent.
+        int estimate();
 
-		static void setAlgorithm(ETAlgorithm theValue);
-		static ETAlgorithm algorithm() { return m_algorithm; }
+    private:
+        int estimateGASA();
+        int estimateWINX();
+        int estimateMAVG();
+        int estimateKT();
 
-	private:
+        Uint32 sample() const;
+        Uint64 bytesLeft() const;
 
-		int estimateCSA();
-		int estimateGASA();
-		int estimateWINX();
-		int estimateMAVG();
-		int estimateKT();
+        TorrentControl* m_tc;
+        SampleQueue* m_samples;
 
-		Uint32 sample() const;
-		Uint64 bytesLeft() const;
+        Uint32 m_lastAvg;
+        int m_lastETA;
 
-		TorrentControl* m_tc;
-		SampleQueue* m_samples;
-
-		Uint32 m_lastAvg;
-		int m_lastETA;
-
-		//last percentage
-		double m_perc;
-
-		static ETAlgorithm m_algorithm;
-	};
+        //last percentage
+        double m_perc;
+    };
 
 }
 
